--- a/less/assistant.less
+++ b/less/assistant.less
@@ -324,7 +324,6 @@
  }
 
  .admission-form {
-
      &__item {
         border-bottom: 4px solid #fff;
         border-radius: 2px;
@@ -477,6 +476,7 @@
     }
 
     &__date {
+        margin: 7px 0 10px;
         font-size: 10px;
         line-height: 12px;
         color: #018FF6;
